Fix jumpy animations when filtering/deleting items + fix item spacing again

--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -60,10 +60,6 @@
   margin-left: 12px;
 }
 
-.pano-window.vertical .pano-item:first-child {
-  margin-top: 6px;
-}
-
 .pano-item:last-child {
   margin-right: 12px;
 }
